gmap spacing fix

--- a/resources/assets/sass/mobile.scss
+++ b/resources/assets/sass/mobile.scss
@@ -4094,7 +4094,8 @@ p {
     flex-direction: column;
     height: 100%;
     & > div:last-child {
-        flex: 1 1 auto;
+        height: calc(100% - 50px);
+        margin-top: 50px;
     }
 }
 
